prepare some TestNG test for loading map